--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,java,vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,java,vscode
 
+
 .idea/*
 logs/*
+.vscode/
 ### Java ###
 # Compiled class file
 *.class
